rework system layer for german+symbols

--- a/keymap.dtsi.erb
+++ b/keymap.dtsi.erb
@@ -1,6 +1,6 @@
 // NOTE: Use the `#define` settings below to customize this keymap!
 // For example, here are the main optional features you can enable:
-#define DIFFICULTY_LEVEL  0 // 0:custom, 1:easy -> 5:hard (see below)
+#define DIFFICULTY_LEVEL  3 // 0:custom, 1:easy -> 5:hard (see below)
 #define ENFORCE_BILATERAL   // cancels single-handed home row mod+tap
 // TIP: Add more setting overrides here instead of editing them below.
 
@@ -49,7 +49,7 @@
     windows: "'W'"
   }.each_with_index do |(os, char), index|
 %>
-<%= "//" if index > 0 %>#define OPERATING_SYSTEM <%= char %> // <%= os %>
+<%= "//" if index != 2 %>#define OPERATING_SYSTEM <%= char %> // <%= os %>
 <%
   end
 %>
@@ -1341,7 +1341,7 @@ macros {
     //
     #ifndef UNICODE_SEQ_WINDOWS
     #define UNICODE_SEQ_WINDOWS(keystrokes) \
-        <&macro_tap &kp RA(U) keystrokes &kp ENTER>
+        <&macro_press &kp RALT>, <&macro_tap &kp KP_PLUS keystrokes>, <&macro_release &kp RALT>
     #endif
 
     //
